Tue Jun 26 17:37:02 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/WriteDataContainer.h:
        
          Added a space to resolve errors like:
          error: `<::' cannot begin a template-argument list

Tue Jun 26 18:28:14 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds/InfoRepo/DCPS_Entity_Id_Generator.cpp:

          Made the counter in file scope instead of in the function scope so
          the set_base_*_id will set the same counter as get_*_id. This would
          fix the Prst_delayed_subscriber test failure.

Tue Jun 26 15:56:16 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/FooTest5/common.cpp:
        * tests/DCPS/FooTest5/run_test.pl:

          Fixed the logic for loading transports in the subscriber process and
          some typos in the Perl script.

Tue Jun 26 15:35:26 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/Registered_Data_Types.h:
        * dds/DCPS/Registered_Data_Types.cpp:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/WriteDataContainer.cpp:

          More std::map and std::set replacements for ACE equivalents.

Mon Jun 25 22:00:42 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * DDS_info.txt:
        * docs/design/IDL_compiler.txt:

          Removed characters that were outside of the standard ASCII range.

Mon Jun 25 20:20:39 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/Util.h:
        * dds/DCPS/transport/framework/TransportFactory.h:
        * dds/DCPS/transport/framework/TransportFactory.cpp:

          More std::map and std::set replacements for ACE equivalents.

Mon Jun 25 16:24:29 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/Definitions.h:
        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/DomainParticipantFactoryImpl.cpp: